fix profile picture not centered

--- a/src/ProfileInfo.css
+++ b/src/ProfileInfo.css
@@ -3,3 +3,7 @@
     width: 25%;
     color: white;
 }
+
+.profile-display card {
+    margin: auto;
+}
